changed weight of h5, added padding between links to social media, fixed rest of spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,7 @@ h2{
 h3{
 	font-weight: 400;
 }
+
+h5{
+	font-weight: 700;
+}
